fix scrollbar

--- a/src/assets/proseqviewer.css
+++ b/src/assets/proseqviewer.css
@@ -1,10 +1,8 @@
 .root{
   font-family: monospace, monospace;
-  overflow-y: auto;
-
 }
 
-body {
+html {
   overflow-y: scroll;
 }
 
